<resources>
    <string name="app_name">Dungeons and Dragons Manager</string>
    <string name="action_settings">Settings</string>
    <string name="new_player">New Player</string>
    <string name="existing_player">Existing Player</string>
    <string name="dd_Manager">D&amp;D\nManager</string>
    <string name="start">Start</string>
    <string name="proceed">Proceed</string>
    <string name="class_menu">Class Menu</string>
    <string name="race_menu">Race Menu</string>
    <string name="dwarf">Dwarf</string>
    <string name="elf">Elf</string>
    <string name="halfling">Halfling</string>
    <string name="human">Human</string>
    <string name="dragonborn">Dragonborn</string>
    <string name="gnome">Gnome</string>
    <string name="half_elf">Half-Elf</string>
    <string name="half_orc">Half-Orc</string>
    <string name="tiefling">Teifling</string>
    <string name="dwarf_description">Dwarves are bold, hardy creatures that typically roam in great
        halls carved out of the sides of mountains.  Though they usually are under five feet tall,
        they are so broad and compact they can weigh around the same as a human two feet taller.
        Dwarves can live to be up to 400 years old, which grants them a perspective on the world
        that shorter-lived races lack. Dwarven kingdoms stretch deep beneath the mountains where the
        dwarves mine gems and precious metals, and forge items of wonder.  The chief unit of dwarven
        society is the clan, and dwarves highly value social standing.  To be clanless is the worst
        fate that can befall a dwarf.  Dwarves who take up the adventuring life might be motivated
        by a desire for treasure, or the command or inspiration of a deity.  A dwarf might also seek
        to restore a clan\'s lost honor, or avenge an ancient wrong the clan suffered.</string>
    <string name="elf_description">Elves are a magical people of otherworldly grace, living in the
        world but not entirely part of it. They live in places of ethereal beauty, in the midst of
        ancient forests or in silvery spires glittering with faerie light, where soft music drifts
        through the air and gentle fragrances waft on the breeze. Elves love nature and magic, art
        and artistry, music and poetry, and the good things of the world.</string>
    <string name="halfling_description">The comfort of home are the goals of most halflings’
        lives: a place to settle in peace and quiet, far from marauding monsters and clashing
        armies; a blazing fire and a generous meal; fine drink and fine conversation. Though some
        halflings live out their days in remote agricultural communities, others form nomadic bands
        that travel constantly, lured by the open road and the wide horizon to discover the wonders
        of new lands and peoples. But even these wanderers love peace, food, hearth, and home,
        though home might be a wagon jostling along a dirt road or a raft floating downriver.</string>
    <string name="human_description">In the reckonings of most worlds, humans are the youngest of
        the common races, late to arrive on the world scene and short-lived in comparison to
        dwarves, elves, and dragons. Perhaps it is because of their shorter lives that they strive
        to achieve as much as they can in the years they are given. Or maybe they feel they have
        something to prove to the elder races, and that’s why they build their mighty empires on
        the foundation of conquest and trade. Whatever drives them, humans are the innovators,
        the achievers, and the pioneers of the worlds.</string>
    <string name="dragonborn_description">Born of dragons, as their name proclaims, the dragonborn
        walk proudly through a world that greets them with fearful incomprehension. Shaped by
        draconic gods or the dragons themselves, dragonborn originally hatched from dragon eggs
        as a unique race, combining the best attributes of dragons and humanoids. Som e dragonborn
        are faithful servants to true dragons, others form the ranks of soldiers in great wars,
        and still others find themselves adrift, with no clear calling in life.</string>
    <string name="gnome_description">A constant hum of busy activity pervades the warrens and
        neighborhoods where gnomes form their close- knit communities. Louder sounds punctuate
        the hum: a crunch of grinding gears here, a minor explosion there, a yelp of surprise
        or triumph, and especially bursts of laughter. Gnomes take delight in life, enjoying
        every moment of invention, exploration, investigation, creation, and play.</string>
    <string name="half_elf_description">Walking in two worlds but truly belonging to neither,
        half-elves combine what some say are the best qualities of their elf and human parents:
        human curiosity, inventiveness, and ambition tempered by the refined senses, love of nature,
        and artistic tastes of the elves. Some half-elves live among humans, set apart by their
        emotional and physical differences, watching friends and loved ones age while time barely
        touches them. Others live with the elves, growing restless as they reach adulthood in the
        timeless elven realms, while their peers continue to live as children. Many half-elves,
        unable to fit into either society, choose lives of solitary wandering or join with other
        misfits and outcasts in the adventuring life.</string>
    <string name="half_orc_description">Whether united under the leadership of a mighty warlock or
        having fought to a standstill after years of conflict, orc and human tribes sometimes form
        alliances, joining forces into a larger horde to the terror of civilized lands nearby. When
        these alliances are sealed by marriages, half-orcs are born. Some half-orcs rise to become
        proud chiefs of orc tribes, their human blood giving them an edge over their full-blooded
        orc rivals. Some venture into the world to prove their worth among humans and other more
        civilized races. Many of these become adventurers, achieving greatness for their mighty
        deeds and notoriety for their barbaric customs and savage fury.</string>
    <string name="tiefling_description">To be greeted with stares and whispers, to suffer violence
        and insult on the street, to see mistrust and fear in every eye: this is the lot of the
        tiefling. And to twist the knife, tieflings know that this is because a pact struck
        generations ago infused the essence of Asmodeus—overlord of the Nine Hells—into their
        bloodline. Their appearance and their nature are not their fault but the result of an
        ancient sin, for which they and their children and their children’s children will always
        be held accountable.</string>
    <string name="barbarian_description">Barbarians are defined by their rage: unbridled, unquenchable, and
        unthinking fury. More than a mere emotion, their anger is the ferocity of a cornered
        predator, the unrelenting assault of a storm, the churning turmoil of the sea. For some,
        their rage springs from a communion with fierce animal spirits. Others draw from a roiling
        reservoir of anger at a world full of pain. For every barbarian, rage is a power that
        fuels not just a battle frenzy but also uncanny reflexes, resilience, and feats of
        strength.</string>
    <string name="bard_description">Whether scholar, skald, or scoundrel, a bard weaves magic through words and
        music to inspire allies, demoralize foes, manipulate minds, create illusions, and even heal
        wounds.</string>
    <string name="cleric_description">Clerics are intermediaries between the mortal world and the distant
        planes of the gods. As varied as the gods they serve, clerics strive to embody the
        handiwork of their deities. No ordinary priest, a cleric is imbued with divine
        magic.</string>
    <string name="druid_description">Whether calling on the elemental forces of nature or emulating the
        creatures of the animal world, druids are an embodiment of nature’s resilience, cunning,
        and fury. They claim no mastery over nature. Instead, they see themselves as extensions
        of nature’s indomitable will.</string>
    <string name="fighter_description">Fighters are perhaps the most diverse class of characters in the worlds
        of Dungeon and Dragons. Questing knights, conquering overlords, royal champions, elite foot
        soldiers, hardened mercenaries, and bandit kings—as fighters, they all share an
        unparalleled mastery with weapons and armor, and a thorough knowledge of the skills of
        combat. And they are well acquainted with death, both meting it out and staring it
        defiantly in the face.</string>
    <string name="monk_description">Monks are united in their ability to magically harness the energy that
        flows in their bodies. Whether channeled as a striking display of combat prowess or a
        subtler focus of defensive ability and speed, this energy infuses all that a monk
        does.</string>
    <string name="paladin_description">Paladins are united by their oaths to stand against the forces of evil.
        Whether sworn before a god’s altar and the witness of a priest, in a sacred glade before
        nature spirits and fey beings, or in a moment of desperation and grief with the dead as
        the only witness, a paladin’s oath is a powerful bond. It is a source of power that turns a
        devout warrior into a blessed champion.</string>
    <string name="ranger_description">Far from the bustle of cities and towns, past the hedges that shelter
        the most distant farms from the terrors of the wild, amid the dense-packed trees of
        trackless forests and across wide and empty plains, rangers keep their unending
        watch.</string>
    <string name="rogue_description">Rogues rely on skill, stealth, and their foes’ vulnerabilities to get the
        upper hand in any situation. They have a knack for finding the solution to just about any
        problem, demonstrating a resourcefulness and versatility that is the cornerstone of any
        successful adventuring party.</string>
    <string name="sorcerer_description">Sorcerers carry a magical birthright conferred upon them by an exotic
        bloodline, some otherworldly influence, or exposure to unknown cosmic forces. One can’t
        study sorcery as one learns a language, any more than one can learn to live a legendary
        life. No one chooses sorcery; the power chooses the sorcerer.</string>
    <string name="warlock_description">Warlocks are seekers of the knowledge that lies hidden in the fabric
        of the multiverse. Through pacts made with mysterious beings of supernatural power,
        warlocks unlock magical effects both subtle and spectacular. Drawing on the ancient
        knowledge of beings such as fey nobles, demons, devils, hags, and alien entities of the
        Far Realm, warlocks piece together arcane secrets to bolster their own power.</string>
    <string name="background_menu">Background Menu</string>
    <string name="new_or_existing_player">Are You A New or Existing Player</string>
    <string name="your_character">Your Character</string>
    <string name="raceDescription">Description of Race</string>
    <string name="class_description">Description of Class</string>
    <string name="myClass">Class:</string>
    <string name="race">Race:</string>
    <string name="background">Background:</string>
    <string name="background_description">Description of Background</string>
    <string name="attributes">Attributes</string>
    <string name="other_Info">Character Bonus</string>
</resources>