<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_menu"
        android:id="@+id/chooseClassText"
        android:layout_gravity="center_horizontal"
        android:textSize="100px"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:layout_width="500px"
        android:layout_height="500px"
        android:id="@+id/classImage"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/raceProceed"
        android:layout_toLeftOf="@+id/raceProceed" />

    <TextView
        android:layout_width="500px"
        android:layout_height="500px"
        android:text="@string/class_description"
        android:id="@+id/classDescription"
        android:textSize="50px"
        android:layout_alignTop="@+id/classImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:id="@+id/classProceed"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:enabled="false" />

</RelativeLayout>