<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_character"
        android:id="@+id/yourCharacter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="100px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:text="@string/attributes"
        android:id="@+id/attributes"
        android:layout_below="@+id/yourCharacter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="35px"
        android:background="@drawable/border" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="350px"
        android:layout_below="@+id/attributes"
        android:background="@drawable/border"
        android:id="@+id/raceInformation"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race"
            android:id="@+id/raceHeader"
            android:textSize="35px"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="New Text"
            android:id="@+id/myRace"
            android:textSize="35px"
            android:scrollbars = "vertical"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="350px"
        android:layout_below="@+id/raceInformation"
        android:background="@drawable/border"
        android:id="@+id/classInformation"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myClass"
            android:id="@+id/classHeader"
            android:textSize="35px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/myClass"
            android:textSize="35px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scrollbars="vertical"
            android:text="New Text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="350px"
        android:background="@drawable/border"
        android:layout_below="@+id/classInformation"
        android:id="@+id/backgroundInformation"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:id="@+id/backHeader"
            android:textSize="35px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/background"
            android:id="@+id/myBackground"
            android:textSize="35px"
            android:layout_below="@+id/backHeader"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scrollbars="vertical"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backgroundButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/backgroundButton"
        android:layout_toStartOf="@+id/backgroundButton"
        android:layout_marginLeft="15px"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/raceButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/classButton"
        android:layout_toStartOf="@+id/classButton"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statsButton"
        android:layout_alignTop="@+id/backgroundButton"
        android:layout_toRightOf="@+id/backgroundButton"
        android:layout_toEndOf="@+id/backgroundButton"
        android:layout_marginRight="15px"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalCharacterButton"
        android:layout_alignTop="@+id/statsButton"
        android:layout_toRightOf="@+id/statsButton"
        android:layout_toEndOf="@+id/statsButton"
        android:background="#0000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnButton"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/backgroundInformation"
        android:layout_centerHorizontal="true" />

</RelativeLayout>