<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race_menu"
        android:id="@+id/chooseRaceText"
        android:layout_gravity="center_horizontal"
        android:textSize="100px"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseRaceText"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </LinearLayout>
    </HorizontalScrollView>



    <ImageView
        android:layout_width="450px"
        android:layout_height="650px"
        android:id="@+id/raceImage"
        android:layout_alignTop="@+id/otherInformation"
        android:layout_toLeftOf="@+id/raceProceed"
        android:layout_toStartOf="@+id/raceProceed" />

    <TextView
        android:layout_width="450px"
        android:layout_height="650px"
        android:text="@string/other_Info"
        android:id="@+id/otherInformation"
        android:textSize="50px"
        android:scrollbars = "vertical"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:background="@drawable/border"
        android:layout_above="@+id/raceDescription"
        android:layout_toRightOf="@+id/raceProceed"
        android:layout_toEndOf="@+id/raceProceed"
        android:layout_marginBottom="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="350px"
        android:text="@string/raceDescription"
        android:id="@+id/raceDescription"
        android:layout_above="@+id/raceProceed"
        android:layout_alignRight="@+id/otherInformation"
        android:layout_alignEnd="@+id/otherInformation"
        android:layout_alignLeft="@+id/raceImage"
        android:layout_alignStart="@+id/raceImage"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:background="@drawable/border"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:id="@+id/raceProceed"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80px"
        android:layout_marginBottom="80dp"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backgroundButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/backgroundButton"
        android:layout_toStartOf="@+id/backgroundButton"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/raceButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/classButton"
        android:layout_toStartOf="@+id/classButton"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statsButton"
        android:layout_alignTop="@+id/backgroundButton"
        android:layout_toRightOf="@+id/backgroundButton"
        android:layout_toEndOf="@+id/backgroundButton"
        android:background="#0000"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalCharacterButton"
        android:layout_alignTop="@+id/statsButton"
        android:layout_toRightOf="@+id/statsButton"
        android:layout_toEndOf="@+id/statsButton"
        android:background="#0000"/>


</RelativeLayout>